[Release] 0.1.1 fixes score displays

--- a/qml/html/scores.html
+++ b/qml/html/scores.html
@@ -22,11 +22,11 @@
         </div>
         <div>
             <label for="won">Won</label>
-            <input type="text" readonly="readonly" id="no. won" >
+            <input type="text" readonly="readonly" id="won" value="0">
         </div>
         <div>
             <label for="won%">Won %</label>
-            <input type="text" readonly="readonly" id="%  won" value="NaN">
+            <input type="text" readonly="readonly" id="won%" value="NaN">
         </div>
         
         <div class="guessStatistics"> 
