--- a/qml/html/scores.html
+++ b/qml/html/scores.html
@@ -21,7 +21,7 @@
             <input type="text" readonly="readonly" id="played" value="0">
         </div>
         <div>
-            <label for="won">Won</label>
+            <label for="won">Won &nbsp&nbsp&nbsp</label>
             <input type="text" readonly="readonly" id="won" value="0">
         </div>
         <div>
